Final History Code Ready For Review (coverage Fix) (actually compatible now)