@@ -4,6 +4,7 @@ import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 public class ViewTimelineInteractor implements ViewTimelineInputBoundary {
     private final ITimelineRepository timelineRepo;
@@ -27,7 +28,7 @@ public class ViewTimelineInteractor implements ViewTimelineInputBoundary {
 
         ViewTimelineResponse resp = new ViewTimelineResponse();
         resp.setCourseId(courseId);
-        resp.setItems(events.stream().map(e -> toCard(e, resp)).toList());
+        resp.setItems(events.stream().map(e -> toCard(e, resp)).collect(Collectors.toList()));
         resp.setEmpty(resp.getItems().isEmpty());
 
         presenter.present(resp);
@@ -45,18 +46,21 @@ public class ViewTimelineInteractor implements ViewTimelineInputBoundary {
                 vm.setType("NOTES");
                 vm.setTitle(e.getTitle() == null || e.getTitle().isEmpty() ? "Notes" : e.getTitle());
                 vm.setSnippet(e.getSnippet());
+                vm.setFullNotesText(e.getFullNotesText());
                 break;
             case FLASHCARDS_GENERATED:
                 vm.setIcon("cards");
                 vm.setType("FLASHCARDS");
                 vm.setTitle("Flashcards");
                 vm.setSubtitle(e.getNumCards() == null ? "" : e.getNumCards() + " cards");
+                vm.setFlashcardData(e.getFlashcardData());
                 break;
             case QUIZ_GENERATED:
                 vm.setIcon("quiz");
                 vm.setType("QUIZ");
                 vm.setTitle("Quiz");
                 vm.setSubtitle(e.getNumQuestions() == null ? "" : e.getNumQuestions() + " questions");
+                vm.setTestData(e.getTestData());
                 break;
             case QUIZ_SUBMITTED:
                 vm.setIcon("score");
@@ -67,6 +71,7 @@ public class ViewTimelineInteractor implements ViewTimelineInputBoundary {
                 } else {
                     vm.setSubtitle("");
                 }
+                vm.setEvaluationData(e.getEvaluationData());
                 break;
         }
         return vm;
